# urbansurge

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt  setup.cfg
analysis/: example_swmm_run.ipynb  fault_database.ipynb  fault_sensitivity.ipynb  fault_simulation.ipynb  flood_heatmap.ipynb  flood_severity.ipynb  network_graph.ipynb  scenario_database.ipynb  single_swmm_run.ipynb  swmm_parameter_comparison.ipynb  system_viz.ipynb  ttv_ann.ipynb  ttv_cnn.ipynb
analysis/002System_Scale_Detection/: discretize_system.ipynb  inflow_timeseries.ipynb  mutual_information.ipynb
analysis/Bellinge/: flood_sensor_network.ipynb  optimal_network_results.csv  optimal_network_results_0.5.csv  random_network_results.csv  random_network_results_0.5.csv
analysis/Example8/: example8_eda.ipynb
analysis/Fault_Signatures/: basin_silting_signature.ipynb  diameter_signature.ipynb  fault_flow_relationship.ipynb  fault_parameter_estimation.ipynb  fault_signatures.ipynb  roughness_and_flow.ipynb  seepage_signature.ipynb  storage_infiltration_signature.ipynb
analysis/gravity_pressure_transition/: blockage_flow.ini  blockage_flow.inp  blockage_flow_analysis.ipynb  blockage_flow_config.yml  blockage_flow_no_fault.ini  blockage_flow_no_fault.rpt  blockage_flow_no_fault_config.yml  blockage_flow_no_fault_tmp.inp  (+5 more)
docs/: CNAME  api.rst  conf.py  index.rst  usage.rst
tests/: test_analysis_tools.py  test_reflection_filter.py  test_sensor_network.py  test_sensor_utils.py  test_swmm_model.py  test_urbansurge_file_utils.py
urbansurge/: scenario_database_config.yml
(+382 files in other folders)
