[metadata]
name = urbansurge
version = 0.0.1
author = Alex Young
description = SWMM automation and analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-l-young/urbansurge
project_urls =
    Bug Tracker = https://github.com/alex-l-young/urbansurge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyswmm==1.4.0
    PyYAML==6.0
    numpy
    pandas
    matplotlib
    pytest
    notebook


[options.packages.find]
where = src